2020-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-signal-strings): New defun.

	* tramp-adb.el (tramp-adb-handle-process-file):
	* tramp-sh.el (tramp-sh-handle-process-file): Use it.

2020-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-enabled): Prevent crash for older Emacsen.

2020-05-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-handle-process-file):
	* tramp-sh.el (tramp-sh-handle-process-file): Handle signals.

2020-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-send-command-and-check): Add optional
	argument EXIT-STATUS.
	(tramp-adb-handle-process-file): Use it.

	* tramp-sh.el (tramp-send-command-and-check): Add optional
	argument EXIT-STATUS.
	(tramp-sh-handle-process-file): Use it.  (Bug#41099)

2020-04-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.4 released.

2020-04-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-conf): Fix docstring.
	(tramp-smb-options): New defcustom.
	(tramp-smb-handle-copy-directory, tramp-smb-handle-file-acl)
	(tramp-smb-handle-set-file-acl, tramp-smb-maybe-open-connection):
	Use it.

2020-04-14  Mattias Engdegård  <mattiase@acm.org>

	* tramp.el (tramp-use-absolute-autoload-file-names):
	Replace ^ and $ with \` and \', respectively.

2020-04-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-process-alive): Read pending output.

2020-04-01  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (tramp-repository-branch)
	(tramp-repository-version): Bind `debug-on-error' to nil.

2020-03-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.3 released.

2020-03-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-handle-write-region):
	* tramp-smb.el (tramp-smb-handle-write-region): Flush the cache
	after the file has been written.

2020-03-21  Michael Albinus  <michael.albinus@gmx.de>
